-- recurrink data model v2

DROP TABLE models CASCADE;
CREATE TABLE models (
  mid serial PRIMARY KEY,
  model VARCHAR(50)
);

DROP TABLE pens CASCADE;
CREATE TABLE pens (
  ver serial PRIMARY KEY,
  widthmm DECIMAL,
  gplfile VARCHAR(50)
);

INSERT INTO pens (gplfile)
VALUES
  (null),
  ('uniball'),
  ('copicsketch'),
  ('copic'),
  ('stabilo68'),
  ('sharpie'),
  ('staedtler'),
  ('stabilo88');


DROP TABLE colors CASCADE;
CREATE TABLE colors (
  ver INT,
  fill VARCHAR(7) CHECK (fill ~* '^#[a-f0-9]{6}$'),  -- enforce once
  penam VARCHAR(50),
  FOREIGN KEY (ver) REFERENCES pens (ver),
  UNIQUE (ver, fill)
);

-- guide rink generation from model
DROP TABLE compass;
CREATE TABLE compass (
  mid INT,
  cell CHAR(1) NOT NULL,
  pair CHAR(1),
  facing VARCHAR(2) NOT NULL,
  FOREIGN KEY (mid) REFERENCES models (mid)
);
DROP TABLE blocks;
CREATE TABLE blocks (
  mid INT,
  position INT [] NOT NULL,
  cell CHAR(1) NOT NULL,
  top CHAR(1),
  FOREIGN KEY (mid) REFERENCES models (mid),
  UNIQUE (mid, position)
);

-- an instance of a model is rink
DROP TABLE rinks CASCADE;
CREATE TABLE rinks (
  rinkid CHAR(32) PRIMARY KEY,     -- digest anyways makes unique IDs
  mid INT,
  ver INT,
  clen INT,
  factor NUMERIC(3,2),
  created timestamp DEFAULT current_timestamp,
  pubdate timestamp,
  FOREIGN KEY (mid) REFERENCES models (mid),
  FOREIGN KEY (ver) REFERENCES pens (ver),
  UNIQUE (rinkid)
);


DROP TABLE layers CASCADE;
CREATE TABLE layers (
  rinkid CHAR(32),
  cell CHAR(1) NOT NULL,
  layer SMALLINT NOT NULL,
  name VARCHAR(7),
  size VARCHAR(7),
  facing VARCHAR(2),
  stroke VARCHAR(7),
  dasharray VARCHAR(15) DEFAULT NULL,
  FOREIGN KEY (rinkid) REFERENCES rinks (rinkid),
  UNIQUE (rinkid, cell, layer)
);

-- the end
