@startuml

package "model" {
  entity pens {
   ver: INT
   gplfile: STR
   widthmm: DECIMAL
  }
  entity models {
    mid: INT
    model: STR
  }
  entity blocks {
    mid: STR 
    position: INT
    cell: CHAR 
    top: BOOL
  }
  entity compass {
    mid: STR 
    cell: CHAR
    pair: CHAR
    facing: STR
  }
}
package "block" {
  entity colors {
    ver: INT
    fill: HEX
    penam: STR
  }
  entity rinks {
    rinkid: CHAR
    mid: STR
    size: INT
    factor: DECIMAL
    created: DATE
    ver: INT
    pubdate: DATE
  }
}
package "cell" {
  entity layers {
    rinkid: CHAR
    cell: CHAR
    layer: INT
    name: STR
    size: STR
    facing: CHAR
    stroke: HEX
    dasharray: INT
  } 
}


layers  *-- rinks
rinks   *-- blocks
rinks   *-- colors
colors  *-- pens
blocks  *-- models
compass *-- models

@enduml
